# nova

./: .env.example  AGENTS.md  LICENSE  README.md  SOUL.md  TOOLS.md  USER.md  mcp_servers.json  pyproject.toml
nova/: __main__.py  config.py  terminal_ui.py
nova/agent/: autocompact.py  compression.py  context.py  loop.py  mem0_backend.py  memory.py  memory_backend.py  memory_jobs.py  memory_migration.py  memory_retrieval.py  memory_snapshot.py  memory_status.py  memory_telemetry.py  runner.py
nova/background/: manager.py
nova/cli/: repl.py  tool_hints.py
nova/cron/: service.py  types.py
nova/heartbeat/: service.py
nova/mcp/: client.py  config.py  loader.py
nova/permissions/: defaults.py  manager.py
nova/providers/: base.py  litellm_provider.py
nova/security/: network.py
nova/session/: store.py
nova/skills/: loader.py
nova/subagent/: capabilities.py  runner.py
nova/tasks/: hooks.py  manager.py  todo.py
nova/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md
nova/templates/skills/memory/: SKILL.md
nova/tools/: base.py  file_state.py  filesystem.py  orchestration.py  registry.py  shell.py  web.py
nova/tools/builtin/: ask.py  background.py  cron.py  filesystem.py  mem0_tools.py  shell.py  skills.py  subagent.py  tasks.py  todo.py
nova/utils/: gitstore.py
tests/: test_cli_interrupt.py  test_mcp_client.py  test_mem0_backend.py  test_mem0_integration.py  test_mem0_tools.py  test_memory_baseline.py  test_memory_retrieval.py  test_memory_snapshot_migration.py  test_memory_status.py  test_memory_write_path.py  test_provider_temperature.py
(+1 files in other folders)
