[project]
name = "nova-ai"
version = "0.1.0"
description = "A minimal modular autonomous coding agent framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nova contributors" }
]
dependencies = [
    "croniter>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<1.0.0",
    "litellm>=1.67.0,<2.0.0",
    "mcp>=1.0.0,<2.0.0",
    "mem0ai>=1.0.1,<2.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "qdrant-client>=1.12.0,<2.0.0",
    "pyyaml>=6.0,<7.0.0",
    "rich>=14.0.0,<15.0.0",
]

[project.scripts]
nova = "nova.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nova"]
